// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionDetailsItem matches snapshot 1`] = `
<div
  className="usa-grid-full padded-main-content position-details-outer-container"
>
  <div
    className="handshake-offset-container"
  />
  <div
    className="usa-grid-full position-details-description-container positions-details-about-position"
  >
    <div
      className="usa-width-two-thirds about-section-left"
    >
      <h2>
        About the Position
      </h2>
      <PositionDetailsDescription
        details={
          Object {
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editDescriptionContent={[Function]}
        resetDescriptionEditMessages={[Function]}
        updatedDate={null}
      />
      <div
        className="usa-grid-full data-point-section"
      >
        <CondensedCardDataPoint
          ariaLabel="1 0 0 3 4 0 0 1"
          content="10034001"
          hasFixedTitleWidth={false}
          title="Position number"
        />
        <CondensedCardDataPoint
          content={
            <PositionSkillCodeList
              primarySkill="OFFICE MANAGEMENT (9017)"
              secondarySkill=""
            />
          }
          hasFixedTitleWidth={false}
          title="Skill"
        />
        <CondensedCardDataPoint
          content="06"
          hasFixedTitleWidth={false}
          title="Grade"
        />
        <CondensedCardDataPoint
          content="(AF) BUREAU OF AFRICAN AFFAIRS"
          hasFixedTitleWidth={false}
          title="Bureau"
        />
        <CondensedCardDataPoint
          content="2 YRS (2 R & R)"
          hasFixedTitleWidth={false}
          title="Tour of Duty"
        />
        <CondensedCardDataPoint
          content={
            <LanguageList
              languages={Array []}
              propToUse="representation"
            />
          }
          hasFixedTitleWidth={false}
          title="Language"
        />
        <CondensedCardDataPoint
          content={
            <DefinitionList
              dangerPay={0}
              obcUrl={Object {}}
              postDifferential={30}
            />
          }
          hasFixedTitleWidth={false}
          title="Post Differential | Danger Pay"
        />
        <CondensedCardDataPoint
          content="Demo BidCycle 2018-03-13 15:51:10.980576+00:00"
          hasFixedTitleWidth={false}
          title="Bid Cycle"
        />
        <CondensedCardDataPoint
          content="None listed"
          hasFixedTitleWidth={false}
          title="TED"
        />
        <CondensedCardDataPoint
          content="John Doe"
          hasFixedTitleWidth={false}
          title="Incumbent"
        />
        <CondensedCardDataPoint
          content="Unknown"
          hasFixedTitleWidth={false}
          title="Posted"
        />
        <CondensedCardDataPoint
          content="Not Eligible"
          hasFixedTitleWidth={false}
          title="RWA/DETO Eligible"
        />
      </div>
    </div>
    <div
      className="usa-width-one-third position-details-contact-container"
    >
      <PositionDetailsContact
        bidListToggleIsLoading={false}
        details={
          Object {
            "bidStatistics": Array [
              Object {},
            ],
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editPocContent={[Function]}
        editWebsiteContent={[Function]}
        isProjectedVacancy={false}
        resetDescriptionEditMessages={[Function]}
      />
      <ServiceNeededToggle
        className=""
        loading={false}
        onChange={[Function]}
        position={
          Object {
            "bidcycle": Object {
              "name": "Bid Cycle 1",
            },
            "bureau": null,
            "id": 1,
            "is_overseas": true,
            "languages": Array [],
            "organization": null,
            "position": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                  "id": 6,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 2,
                },
              ],
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "classifications": Array [],
              "create_date": "2006-09-20T00:00:00Z",
              "current_assignment": Object {
                "estimated_end_date": "2020-03-13T15:51:11.478084Z",
                "start_date": "2018-03-13T15:51:11.478084Z",
                "status": "active",
                "tour_of_duty": "2 YRS (2 R & R)",
                "user": "John Doe",
              },
              "description": Object {
                "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
                "date_created": "2018-03-08T18:00:33.241370Z",
                "date_updated": "2018-03-13T15:55:00.018644Z",
                "id": 90,
                "is_editable_by_user": false,
                "last_editing_user": null,
                "point_of_contact": null,
                "website": null,
              },
              "effective_date": "2012-10-22T00:00:00Z",
              "grade": "06",
              "id": 6,
              "is_highlighted": false,
              "is_overseas": true,
              "languages": Array [],
              "latest_bidcycle": Object {
                "active": true,
                "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
                "cycle_end_date": "2018-06-13T15:51:10.980554Z",
                "cycle_start_date": "2017-12-13T15:51:10.980554Z",
                "id": 1,
                "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
              },
              "organization": "(MONROVIA) MONROVIA LIBERIA",
              "position_number": "10034001",
              "post": Object {
                "code": "LI6000000",
                "cost_of_living_adjustment": 30,
                "danger_pay": 0,
                "differential_rate": 30,
                "has_consumable_allowance": true,
                "has_service_needs_differential": true,
                "id": 160,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
                "obc_id": 1,
                "rest_relaxation_point": "Paris",
                "tour_of_duty": "2 YRS (2 R & R)",
              },
              "posted_date": null,
              "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
              "skill": "OFFICE MANAGEMENT (9017)",
              "status": null,
              "status_code": null,
              "title": "OMS (DCM)",
              "tour_of_duty": null,
              "update_date": "2017-06-08T00:00:00Z",
            },
            "post": null,
          }
        }
        userProfile={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`PositionDetailsItem matches snapshot when there is an obc id 1`] = `
<div
  className="usa-grid-full padded-main-content position-details-outer-container"
>
  <div
    className="handshake-offset-container"
  />
  <div
    className="usa-grid-full position-details-description-container positions-details-about-position"
  >
    <div
      className="usa-width-two-thirds about-section-left"
    >
      <h2>
        About the Position
      </h2>
      <PositionDetailsDescription
        details={
          Object {
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editDescriptionContent={[Function]}
        resetDescriptionEditMessages={[Function]}
        updatedDate={null}
      />
      <div
        className="usa-grid-full data-point-section"
      >
        <CondensedCardDataPoint
          ariaLabel="1 0 0 3 4 0 0 1"
          content="10034001"
          hasFixedTitleWidth={false}
          title="Position number"
        />
        <CondensedCardDataPoint
          content={
            <PositionSkillCodeList
              primarySkill="OFFICE MANAGEMENT (9017)"
              secondarySkill=""
            />
          }
          hasFixedTitleWidth={false}
          title="Skill"
        />
        <CondensedCardDataPoint
          content="06"
          hasFixedTitleWidth={false}
          title="Grade"
        />
        <CondensedCardDataPoint
          content="(AF) BUREAU OF AFRICAN AFFAIRS"
          hasFixedTitleWidth={false}
          title="Bureau"
        />
        <CondensedCardDataPoint
          content="2 YRS (2 R & R)"
          hasFixedTitleWidth={false}
          title="Tour of Duty"
        />
        <CondensedCardDataPoint
          content={
            <LanguageList
              languages={Array []}
              propToUse="representation"
            />
          }
          hasFixedTitleWidth={false}
          title="Language"
        />
        <CondensedCardDataPoint
          content={
            <DefinitionList
              dangerPay={0}
              obcUrl={Object {}}
              postDifferential={30}
            />
          }
          hasFixedTitleWidth={false}
          title="Post Differential | Danger Pay"
        />
        <CondensedCardDataPoint
          content="Demo BidCycle 2018-03-13 15:51:10.980576+00:00"
          hasFixedTitleWidth={false}
          title="Bid Cycle"
        />
        <CondensedCardDataPoint
          content="None listed"
          hasFixedTitleWidth={false}
          title="TED"
        />
        <CondensedCardDataPoint
          content="John Doe"
          hasFixedTitleWidth={false}
          title="Incumbent"
        />
        <CondensedCardDataPoint
          content="Unknown"
          hasFixedTitleWidth={false}
          title="Posted"
        />
        <CondensedCardDataPoint
          content="Not Eligible"
          hasFixedTitleWidth={false}
          title="RWA/DETO Eligible"
        />
      </div>
    </div>
    <div
      className="usa-width-one-third position-details-contact-container"
    >
      <PositionDetailsContact
        bidListToggleIsLoading={false}
        details={
          Object {
            "bidStatistics": Array [
              Object {},
            ],
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editPocContent={[Function]}
        editWebsiteContent={[Function]}
        isProjectedVacancy={false}
        resetDescriptionEditMessages={[Function]}
      />
      <ServiceNeededToggle
        className=""
        loading={false}
        onChange={[Function]}
        position={
          Object {
            "bidcycle": Object {
              "name": "Bid Cycle 1",
            },
            "bureau": null,
            "id": 1,
            "is_overseas": true,
            "languages": Array [],
            "organization": null,
            "position": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                  "id": 6,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 2,
                },
              ],
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "classifications": Array [],
              "create_date": "2006-09-20T00:00:00Z",
              "current_assignment": Object {
                "estimated_end_date": "2020-03-13T15:51:11.478084Z",
                "start_date": "2018-03-13T15:51:11.478084Z",
                "status": "active",
                "tour_of_duty": "2 YRS (2 R & R)",
                "user": "John Doe",
              },
              "description": Object {
                "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
                "date_created": "2018-03-08T18:00:33.241370Z",
                "date_updated": "2018-03-13T15:55:00.018644Z",
                "id": 90,
                "is_editable_by_user": false,
                "last_editing_user": null,
                "point_of_contact": null,
                "website": null,
              },
              "effective_date": "2012-10-22T00:00:00Z",
              "grade": "06",
              "id": 6,
              "is_highlighted": false,
              "is_overseas": true,
              "languages": Array [],
              "latest_bidcycle": Object {
                "active": true,
                "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
                "cycle_end_date": "2018-06-13T15:51:10.980554Z",
                "cycle_start_date": "2017-12-13T15:51:10.980554Z",
                "id": 1,
                "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
              },
              "organization": "(MONROVIA) MONROVIA LIBERIA",
              "position_number": "10034001",
              "post": Object {
                "code": "LI6000000",
                "cost_of_living_adjustment": 30,
                "danger_pay": 0,
                "differential_rate": 30,
                "has_consumable_allowance": true,
                "has_service_needs_differential": true,
                "id": 160,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
                "obc_id": 1,
                "rest_relaxation_point": "Paris",
                "tour_of_duty": "2 YRS (2 R & R)",
              },
              "posted_date": null,
              "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
              "skill": "OFFICE MANAGEMENT (9017)",
              "status": null,
              "status_code": null,
              "title": "OMS (DCM)",
              "tour_of_duty": null,
              "update_date": "2017-06-08T00:00:00Z",
            },
            "post": Object {
              "obc_id": 1,
            },
          }
        }
        userProfile={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`PositionDetailsItem matches snapshot when various data is missing from the position 1`] = `
<div
  className="usa-grid-full padded-main-content position-details-outer-container"
>
  <div
    className="handshake-offset-container"
  />
  <div
    className="usa-grid-full position-details-description-container positions-details-about-position"
  >
    <div
      className="usa-width-two-thirds about-section-left"
    >
      <h2>
        About the Position
      </h2>
      <PositionDetailsDescription
        details={
          Object {
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editDescriptionContent={[Function]}
        resetDescriptionEditMessages={[Function]}
        updatedDate={null}
      />
      <div
        className="usa-grid-full data-point-section"
      >
        <CondensedCardDataPoint
          ariaLabel="1 0 0 3 4 0 0 1"
          content="10034001"
          hasFixedTitleWidth={false}
          title="Position number"
        />
        <CondensedCardDataPoint
          content={
            <PositionSkillCodeList
              primarySkill="OFFICE MANAGEMENT (9017)"
              secondarySkill=""
            />
          }
          hasFixedTitleWidth={false}
          title="Skill"
        />
        <CondensedCardDataPoint
          content="06"
          hasFixedTitleWidth={false}
          title="Grade"
        />
        <CondensedCardDataPoint
          content="(AF) BUREAU OF AFRICAN AFFAIRS"
          hasFixedTitleWidth={false}
          title="Bureau"
        />
        <CondensedCardDataPoint
          content="2 YRS (2 R & R)"
          hasFixedTitleWidth={false}
          title="Tour of Duty"
        />
        <CondensedCardDataPoint
          content={
            <LanguageList
              languages={Array []}
              propToUse="representation"
            />
          }
          hasFixedTitleWidth={false}
          title="Language"
        />
        <CondensedCardDataPoint
          content={
            <DefinitionList
              dangerPay={0}
              obcUrl={Object {}}
              postDifferential={30}
            />
          }
          hasFixedTitleWidth={false}
          title="Post Differential | Danger Pay"
        />
        <CondensedCardDataPoint
          content="Demo BidCycle 2018-03-13 15:51:10.980576+00:00"
          hasFixedTitleWidth={false}
          title="Bid Cycle"
        />
        <CondensedCardDataPoint
          content="None listed"
          hasFixedTitleWidth={false}
          title="TED"
        />
        <CondensedCardDataPoint
          content="John Doe"
          hasFixedTitleWidth={false}
          title="Incumbent"
        />
        <CondensedCardDataPoint
          content="Unknown"
          hasFixedTitleWidth={false}
          title="Posted"
        />
        <CondensedCardDataPoint
          content="Not Eligible"
          hasFixedTitleWidth={false}
          title="RWA/DETO Eligible"
        />
      </div>
    </div>
    <div
      className="usa-width-one-third position-details-contact-container"
    >
      <PositionDetailsContact
        bidListToggleIsLoading={false}
        details={
          Object {
            "bidStatistics": Array [
              Object {},
            ],
            "bid_statistics": Array [
              Object {
                "at_skill": 0,
                "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                "id": 6,
                "in_grade": 0,
                "in_grade_at_skill": 0,
                "total_bids": 2,
              },
            ],
            "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
            "classifications": Array [],
            "create_date": "2006-09-20T00:00:00Z",
            "current_assignment": Object {
              "estimated_end_date": "2020-03-13T15:51:11.478084Z",
              "start_date": "2018-03-13T15:51:11.478084Z",
              "status": "active",
              "tour_of_duty": "2 YRS (2 R & R)",
              "user": "John Doe",
            },
            "description": Object {
              "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
              "date_created": "2018-03-08T18:00:33.241370Z",
              "date_updated": "2018-03-13T15:55:00.018644Z",
              "id": 90,
              "is_editable_by_user": false,
              "last_editing_user": null,
              "point_of_contact": null,
              "website": null,
            },
            "effective_date": "2012-10-22T00:00:00Z",
            "grade": "06",
            "id": 6,
            "is_highlighted": false,
            "is_overseas": true,
            "languages": Array [],
            "latest_bidcycle": Object {
              "active": true,
              "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
              "cycle_end_date": "2018-06-13T15:51:10.980554Z",
              "cycle_start_date": "2017-12-13T15:51:10.980554Z",
              "id": 1,
              "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
            },
            "organization": "(MONROVIA) MONROVIA LIBERIA",
            "position_number": "10034001",
            "post": Object {
              "code": "LI6000000",
              "cost_of_living_adjustment": 30,
              "danger_pay": 0,
              "differential_rate": 30,
              "has_consumable_allowance": true,
              "has_service_needs_differential": true,
              "id": 160,
              "location": Object {
                "city": "Freetown",
                "code": "00A",
                "country": "Sierra Leone",
                "id": 103,
                "state": "",
              },
              "obc_id": 1,
              "rest_relaxation_point": "Paris",
              "tour_of_duty": "2 YRS (2 R & R)",
            },
            "posted_date": null,
            "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
            "skill": "OFFICE MANAGEMENT (9017)",
            "status": null,
            "status_code": null,
            "title": "OMS (DCM)",
            "tour_of_duty": null,
            "update_date": "2017-06-08T00:00:00Z",
          }
        }
        editPocContent={[Function]}
        editWebsiteContent={[Function]}
        isProjectedVacancy={false}
        resetDescriptionEditMessages={[Function]}
      />
      <ServiceNeededToggle
        className=""
        loading={false}
        onChange={[Function]}
        position={
          Object {
            "bidcycle": Object {
              "name": "Bid Cycle 1",
            },
            "bureau": null,
            "current_assignment": Object {
              "estimated_end_date": null,
            },
            "grade": null,
            "id": 1,
            "is_overseas": true,
            "languages": Array [],
            "organization": null,
            "position": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "bidcycle": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
                  "id": 6,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 2,
                },
              ],
              "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
              "classifications": Array [],
              "create_date": "2006-09-20T00:00:00Z",
              "current_assignment": Object {
                "estimated_end_date": "2020-03-13T15:51:11.478084Z",
                "start_date": "2018-03-13T15:51:11.478084Z",
                "status": "active",
                "tour_of_duty": "2 YRS (2 R & R)",
                "user": "John Doe",
              },
              "description": Object {
                "content": "The Office Management Specialist (OMS) for the Deputy Chief of Mission (DCM) provides office management services in this Mission of six agencies, 387 American and Locally Employed Staff (LES) positions, and 279 guard force contractors.  The OMS manages Executive Office operations and positionstains the DCM’s calendar in support of overall Mission goals and objectives.  The OMS (DCM) drafts routine correspondence, memoranda and cables as appropriate and ensures documents are cleared and delivered in a timely fashion. The OMS serves as back up to the Ambassador’s OMS.  POCs areSandra McInturff, DCM OMS, McInturffSL@state.gov, 231-77-677-7000, ext. 7452; Samue Watson, DCM, WatsonSR@state.gov, 231-77-677-7000, ext. 7452. Please submit lobbying documents to the 360 Community Lobbying Center http://appcenter.state.sbu/CLC. (Revised 1/2017)

",
                "date_created": "2018-03-08T18:00:33.241370Z",
                "date_updated": "2018-03-13T15:55:00.018644Z",
                "id": 90,
                "is_editable_by_user": false,
                "last_editing_user": null,
                "point_of_contact": null,
                "website": null,
              },
              "effective_date": "2012-10-22T00:00:00Z",
              "grade": "06",
              "id": 6,
              "is_highlighted": false,
              "is_overseas": true,
              "languages": Array [],
              "latest_bidcycle": Object {
                "active": true,
                "cycle_deadline_date": "2018-04-13T15:51:10.980554Z",
                "cycle_end_date": "2018-06-13T15:51:10.980554Z",
                "cycle_start_date": "2017-12-13T15:51:10.980554Z",
                "id": 1,
                "name": "Demo BidCycle 2018-03-13 15:51:10.980576+00:00",
              },
              "organization": "(MONROVIA) MONROVIA LIBERIA",
              "position_number": "10034001",
              "post": Object {
                "code": "LI6000000",
                "cost_of_living_adjustment": 30,
                "danger_pay": 0,
                "differential_rate": 30,
                "has_consumable_allowance": true,
                "has_service_needs_differential": true,
                "id": 160,
                "location": Object {
                  "city": "Freetown",
                  "code": "00A",
                  "country": "Sierra Leone",
                  "id": 103,
                  "state": "",
                },
                "obc_id": 1,
                "rest_relaxation_point": "Paris",
                "tour_of_duty": "2 YRS (2 R & R)",
              },
              "posted_date": null,
              "representation": "[10034001] OMS (DCM) (Monrovia, Liberia)",
              "skill": "OFFICE MANAGEMENT (9017)",
              "status": null,
              "status_code": null,
              "title": "OMS (DCM)",
              "tour_of_duty": null,
              "update_date": "2017-06-08T00:00:00Z",
            },
            "post": null,
            "skill": null,
          }
        }
        userProfile={Object {}}
      />
    </div>
  </div>
</div>
`;
